# ApoMartin_v2

./: .env.example  .gitignore  README.md  config.json5  pyproject.toml
binance_connector/: BinanceUtils.py  CloseSignal.py  CustomException.py  MajorSignal.py  MinorSignal.py  __init__.py  client_instance.py
bot/: __main__.py
bot/binance_connector/: BinanceUtils.py  CloseSignal.py  MajorSignal.py  MinorSignal.py  StartStrategy.py  SymbolsDecimals.py
bot/signal_handler/: __init__.py  app.py
bot/telegram_bot/: __init__.py  send_telegram_alert.py
bot/utils/: __init__.py  configreader.py  logs_configure.py  send_telegram_alert.py
flask_server/: __main__.py
src/binance_connector/: BinanceUtils.py  CloseSignal.py  MajorSignal.py  MinorSignal.py  SymbolsDecimals.py  client_instance.py
src/flask_server/: __main__.py
src/telegram_bot/: __main__.py
src/utils/: __init__.py  configreader.py  logs_configure.py  send_telegram_alert.py
telegram_bot/: __main__.py
utils/: configreader.py
